# sabun_data_model

./: .gitignore  Cargo.toml  readme.md
sabun_maker/: Cargo.toml
sabun_maker/src/: convert_from_json_error.rs  error.rs  get_ref_ids.rs  get_rename.rs  indexmap.rs  json_array_to_rust.rs  json_item_to_rust.rs  json_list_to_rust.rs  json_name.rs  json_siyou.rs  json_to_rust.rs  lib.rs  my_json.rs  read_json.rs  rust_struct.rs
sabun_maker/src/imp/: mod.rs
sabun_maker/src/indexmap/: initialize_performance_test.rs  iterate_performance_test.rs  lookup_performance_test.rs  map.rs  mod.rs  performance_test.rs  str_vec_map.rs
sabun_maker/src/json_to_rust/: array_null.rs  get_ref_ids.rs  get_refs.rs  get_rename.rs  get_renamed.rs  json_array_to_rust.rs  json_item_to_rust.rs  json_list_to_rust.rs  json_name.rs  json_obj_to_rust.rs  mod.rs  names.rs  rename_map.rs
sabun_maker/src/old/: get_ref_ids.rs  get_rename.rs  json_siyou_old.rs  list_idの互換性に対する考え.txt  mod.rs  objectからobjectを生やすか.txt  objectをundefinedにするか.txt  rust_struct.rs  ロードマップ.txt
sabun_maker/src/rust_to_json/: get_renamed.rs  mod.rs  rust_to_json.rs
sabun_maker/src/structs/: array_type.rs  json_file.rs  list_type.rs  mod.rs  my_json.rs  qv.rs  ref_value.rs  root_obj.rs  root_object.rs  rust_list.rs  rust_object.rs  rust_struct.rs  rust_value.rs  value_type.rs
sabun_maker/src/test/: json_dir_test.rs  json_to_rust_and_json.rs  mod.rs  test_version_adjuster.rs
sabun_maker/src/testing/: check_type_size.rs  deconstruct_include_test.rs  initialize_performance_test.rs  json_to_rust_and_json.rs  mod.rs  (+2 more)
(+340 files in other folders)
