[package]
name = "sabun_maker"
version = "0.1.0"
authors = ["massive-spoiler <reddit_chan@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5_parser = { path = "../json5" }
regex = "1.3.1"
lazy_static = "1.4.0"
# indexmap = "1.3.2"
linked-hash-map = "0.5.2"
rand = "0.7"